This file should not be in git repository. Ignore *.l files generated by maintainer mode.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 *.trace
 
 ################################################
+### Maintainer mode
+*.l
+
+################################################
 ### Libraries links 
 src/bindings/ruby/simgrid.so
 examples/ruby/simgrid.so
