.gitignore: do not use wildcards to exclude generated *.l files.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@
 
 ################################################
 ### Maintainer mode
-*.l
+src/simdag/dax_dtd.l
+src/surf/simgrid_dtd.l
+src/xbt/graphxml.l
 
 ################################################
 ### Jedule
