Added some doc for ns-3. Changed a +50 to a ~100 in welcome index.php

--- a/website/index.php.in
+++ b/website/index.php.in
@@ -71,7 +71,7 @@ $group_name="simgrid";
 <h2>Tool dissemination</h2>
 <ul>
 
-<li>Grounded experiments of +50 scientific papers</li>
+<li>Grounded experiments of ~100 scientific papers</li>
 <li>+100 member of the simgrid-user mailing list</li>
 <li>+5 associated tools provided by the community</li>
 </ul>
