--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,9 +171,12 @@ if(WIN32)
     
     if(ARCH_32_BITS)	### Arch 32bits
         set(_WIN32 1)
+        set(NSIS_WIN_VERSION "win32")
     else(ARCH_32_BITS)	### Arch 64bits
         set(_WIN64 1)
+        set(NSIS_WIN_VERSION "win64")
     endif(ARCH_32_BITS)
+
     
     set(_XBT_WIN32 1)
     
