Cosmetics. Rename simgrid_BINARY_DIR for PROJECT_BINARY_DIR.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 2.6)
 if(WIN32)
     SET(CMAKE_RC_COMPILER "windres")
 endif(WIN32)
-project(simgrid CXX C)
+project(SimGrid CXX C)
+
 set(CMAKE_C_FLAGS "" CACHE TYPE INTERNAL FORCE)
 set(CMAKE_CXX_FLAGS "" CACHE TYPE INTERNAL FORCE)
 set(CMAKE_EXE_LINKER_FLAGS "" CACHE TYPE INTERNAL FORCE)
