--- a/examples/msg/masterslave/CMakeLists.txt
+++ b/examples/msg/masterslave/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(masterslave_mailbox "masterslave_mailbox.c")
 add_executable(masterslave_bypass "masterslave_bypass.c")
 add_executable(masterslave_console "masterslave_console.c")
 add_executable(masterslave_cluster "masterslave_cluster.c")
+add_executable(masterslave_kill "masterslave_kill.c")
 
 ### Add definitions for compile
 if(WIN32)
@@ -16,11 +17,13 @@ target_link_libraries(masterslave_failure simgrid )
 target_link_libraries(masterslave_mailbox simgrid )
 target_link_libraries(masterslave_bypass simgrid )
 target_link_libraries(masterslave_console simgrid )
+target_link_libraries(masterslave_kill simgrid )
 else(WIN32)
 target_link_libraries(masterslave_forwarder simgrid m )
 target_link_libraries(masterslave_failure simgrid m )
 target_link_libraries(masterslave_mailbox simgrid m )
 target_link_libraries(masterslave_bypass simgrid m )
 target_link_libraries(masterslave_console simgrid m )
+target_link_libraries(masterslave_kill simgrid m )
 endif(WIN32)
 target_link_libraries(masterslave_cluster simgrid)
