--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,13 @@ doc/index-API.doc
 doc/index.php
 doc/simgrid.tag
 doc/simgrid_modules.map
+doc/publis_core.bib
+doc/publis_core_bib.html
+doc/publis_count.html
+doc/publis_extern.bib
+doc/publis_extern_bib.html
+doc/publis_intra.bib
+doc/publis_intra_bib.html
 
 ################################################
 ### Specific of project 
@@ -209,6 +216,7 @@ examples/simdag/properties/sd_prop
 examples/simdag/sd_test
 examples/simdag/sd_test2
 examples/simdag/dax/dax_test
+examples/simdag/goal/goal_test
 examples/simdag/scheduling/minmin_test
 examples/smpi/reduce
 examples/smpi/bcast
@@ -292,3 +300,28 @@ test_sg
 examples/smpi/smpi_traced.trace
 examples/simdag/dot/simulate_dot
 teshsuite/simdag/platforms/graphicator
+
+#########################################""
+## tutorial files
+doc/gtut-files/01-bones_client
+doc/gtut-files/01-bones_server
+doc/gtut-files/02-simple_client
+doc/gtut-files/02-simple_server
+doc/gtut-files/03-args_client
+doc/gtut-files/03-args_server
+doc/gtut-files/04-callback_client
+doc/gtut-files/04-callback_server
+doc/gtut-files/05-globals_client
+doc/gtut-files/05-globals_server
+doc/gtut-files/06-logs_client
+doc/gtut-files/06-logs_server
+doc/gtut-files/07-timers_client
+doc/gtut-files/07-timers_server
+doc/gtut-files/08-exceptions_client
+doc/gtut-files/08-exceptions_server
+doc/gtut-files/09-simpledata_client
+doc/gtut-files/09-simpledata_server
+doc/gtut-files/10-rpc_client
+doc/gtut-files/10-rpc_server
+doc/gtut-files/11-explicitwait_client
+doc/gtut-files/11-explicitwait_server
