Remove supernovae mode for SimGrid v3.7

--- a/.gitignore
+++ b/.gitignore
@@ -34,10 +34,9 @@ examples/msg/masterslave/simgrid.so
 examples/simdag/simgrid.so
 
 ################################################
-### Units and supernovae files
+### Units files
 src/simgrid_units_main.c
 src/*_unit.c
-src/supernovae_*.c
 
 ################################################
 ### Generated files
